--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
 
+	<script type="text/javascript">
+	
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-35714645-1']);
+	  _gaq.push(['_trackPageview']);
+	
+	  (function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+	
+	</script>
+
   </head>
 
   <body data-spy="scroll" data-target=".bs-docs-sidebar">
@@ -83,6 +97,8 @@
           </div>
 
           <p>These form helpers are based on <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a></p>
+          
+          <p><a href="http://github.com/vlamanna/BootstrapFormHelpers">View the repository</a></p>
         </section>
 
 
@@ -256,7 +272,7 @@
 
     <!-- Footer
     ================================================== -->
-     <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>Designed and built by <a href="http://twitter.com/vincentlamanna" target="_blank">@vincentlamanna</a>.</p>
@@ -264,7 +280,7 @@
         <p>Icons from <a href="http://glyphicons.com">Glyphicons Free</a>, licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
       </div>
     </footer>
-    
+
 
 
     <!-- Le javascript
@@ -292,6 +308,5 @@
     <script src="assets/js/bootstrap-states.js"></script>
     <script src="assets/js/bootstrap-phone.format.js"></script>
     <script src="assets/js/bootstrap-phone.js"></script>
-  
 
 </body></html>
