--- a/index.html
+++ b/index.html
@@ -125,12 +125,18 @@
           <p>These components are based on <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>.</p>
 
           <p>These components are distributed for free but you can contribute and make them better.</p>
-          <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-		  <input type="hidden" name="cmd" value="_s-xclick">
-		  <input type="hidden" name="hosted_button_id" value="W3N9DQD54PVVQ">
-		  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-		  <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-		  </form>
+          
+          <script type="text/javascript"><!--
+		  google_ad_client = "ca-pub-1024496565678366";
+		  /* BootstrapFormHelpers */
+		  google_ad_slot = "7047021726";
+		  google_ad_width = 728;
+		  google_ad_height = 90;
+		  //-->
+		  </script>
+		  <script type="text/javascript"
+		  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+		  </script>
 
         </section>
 
