--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
           <script type="text/javascript"
           src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
           </script>
+          
+          <div style="text-align:center;">
+            <a href="http://novatixhosting.com" target="_blank"><img src="https://img1.wsimg.com/rcc/extranet/marketing/banners/52072_v1_468x60.gif"/></a>
+          </div>
 
         </section>
 
