--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
           </script>
           
-          <div style="text-align:center;">
+          <div>
             <a href="http://novatixhosting.com" target="_blank"><img src="https://img1.wsimg.com/rcc/extranet/marketing/banners/52072_v1_468x60.gif"/></a>
           </div>
 
