--- a/googlefont.html
+++ b/googlefont.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en"><head>
     <meta charset="utf-8">
-    <title>Bootstrap Form Helpers</title>
+    <title>Google Font List - Bootstrap Form Helpers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Extend Bootstrap's components — now with 12 custom jQuery plugins.">
-    <meta name="keywords" content="jquery,jquery plugins,twitter bootstrap,bootstrap form,bootstrap form helpers">
+    <meta name="description" content="Extend Bootstrap's components with google fonts lists.">
+    <meta name="keywords" content="jquery,jquery plugins,twitter bootstrap,bootstrap form,bootstrap form helpers,google fonts,google fonts list">
     <meta name="author" content="">
 
     <!-- Le styles -->
@@ -121,29 +121,111 @@
       </div>
       <div class="span9">
 
-
-        <!-- Overview
+        <!-- Google Fonts
         ================================================== -->
-        <section id="overview">
+        <section id="googlefonts">
           <div class="page-header">
-            <h1>Bootstrap Form Helpers</h1>
+            <h1>Google Fonts <small>bootstrap-formhelpers-googlefonts.js</small></h1>
           </div>
+          <h3>About Google fonts</h3>
+          <p>For adding a drop-down of Google Fonts, include bootstrap-formhelpers-googlefonts.codes.js and bootstrap-formhelpers-googlefonts.js once alongside the other JS files.</p>
+          <h3>Use cases</h3>
 
-          <p>These components are based on <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>.</p>
+          <p>Simplest example, with default selected value.</p>
+          <form class="bs-docs-example form-inline">
+          <div class="bfh-selectbox bfh-googlefonts" data-family="Lato">
+            <input type="hidden" value="">
+            <a class="bfh-selectbox-toggle" role="button" data-toggle="bfh-selectbox" href="#">
+            <span class="bfh-selectbox-option input-large" data-option=""></span>
+            <b class="caret"></b>
+            </a>
+            <div class="bfh-selectbox-options">
+              <input type="text" class="bfh-selectbox-filter">
+              <div role="listbox">
+                <ul role="option">
+                </ul>
+              </div>
+            </div>
+          </div>
+          </form>
+          <pre class="prettyprint">&lt;div class="bfh-selectbox bfh-googlefonts" data-family="Lato"&gt;
+  &lt;input type="hidden" value=""&gt;
+  &lt;a class="bfh-selectbox-toggle" role="button" data-toggle="bfh-selectbox" href="#"&gt;
+    &lt;span class="bfh-selectbox-option input-large" data-option=""&gt;&lt;/span&gt;
+    &lt;b class="caret"&gt;&lt;/b&gt;
+  &lt;/a&gt;
+  &lt;div class="bfh-selectbox-options"&gt;
+    &lt;input type="text" class="bfh-selectbox-filter"&gt;
+    &lt;div role="listbox"&gt;
+    &lt;ul role="option"&gt;
+    &lt;/ul&gt;
+  &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</pre>
 
-          <p>These components are distributed for free but you can contribute and make them better.</p>
+          <p>Display a subset.</p>
+          <form class="bs-docs-example form-inline">
+          <div class="bfh-selectbox bfh-googlefonts" data-subsets="latin-ext">
+            <input type="hidden" value="">
+            <a class="bfh-selectbox-toggle" role="button" data-toggle="bfh-selectbox" href="#">
+            <span class="bfh-selectbox-option input-large" data-option=""></span>
+            <b class="caret"></b>
+            </a>
+            <div class="bfh-selectbox-options">
+              <input type="text" class="bfh-selectbox-filter">
+              <div role="listbox">
+                <ul role="option">
+                </ul>
+              </div>
+            </div>
+          </div>
+          </form>
+          <pre class="prettyprint">&lt;div class="bfh-selectbox bfh-googlefonts" data-subsets="latin-ext"&gt;
+  &lt;input type="hidden" value=""&gt;
+  &lt;a class="bfh-selectbox-toggle" role="button" data-toggle="bfh-selectbox" href="#"&gt;
+    &lt;span class="bfh-selectbox-option input-large" data-option=""&gt;&lt;/span&gt;
+    &lt;b class="caret"&gt;&lt;/b&gt;
+  &lt;/a&gt;
+  &lt;div class="bfh-selectbox-options"&gt;
+    &lt;input type="text" class="bfh-selectbox-filter"&gt;
+    &lt;div role="listbox"&gt;
+    &lt;ul role="option"&gt;
+    &lt;/ul&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</pre>
 
-          <script type="text/javascript"><!--
-          google_ad_client = "ca-pub-1024496565678366";
-          /* BootstrapFormHelpers */
-          google_ad_slot = "7047021726";
-          google_ad_width = 728;
-          google_ad_height = 90;
-          //-->
-          </script>
-          <script type="text/javascript"
-          src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-          </script>
+          <p>Limit font choices.</p>
+          <form class="bs-docs-example form-inline">
+          <div class="bfh-selectbox bfh-googlefonts" data-family="Lato" data-families="Open Sans,Josefin Slab,Avro,Lato,Vollkorn,Abril Fatface,Ubuntu,PT Sans,PT Serif,Old Standard TT,Droid Sans">
+            <input type="hidden" value="">
+            <a class="bfh-selectbox-toggle" role="button" data-toggle="bfh-selectbox" href="#">
+            <span class="bfh-selectbox-option input-large" data-option=""></span>
+            <b class="caret"></b>
+            </a>
+            <div class="bfh-selectbox-options">
+              <input type="text" class="bfh-selectbox-filter">
+              <div role="listbox">
+                <ul role="option">
+                </ul>
+              </div>
+            </div>
+          </div>
+          </form>
+          <pre class="prettyprint">&lt;div class="bfh-selectbox bfh-googlefonts" data-families="Open Sans,Josefin Slab,Avro,Lato,Vollkorn,Abril Fatface,Ubuntu,PT Sans,PT Serif,Old Standard TT,Droid Sans"&gt;
+  &lt;input type="hidden" value=""&gt;
+  &lt;a class="bfh-selectbox-toggle" role="button" data-toggle="bfh-selectbox" href="#"&gt;
+    &lt;span class="bfh-selectbox-option input-large" data-option=""&gt;&lt;/span&gt;
+    &lt;b class="caret"&gt;&lt;/b&gt;
+  &lt;/a&gt;
+  &lt;div class="bfh-selectbox-options"&gt;
+    &lt;input type="text" class="bfh-selectbox-filter"&gt;
+    &lt;div role="listbox"&gt;
+    &lt;ul role="option"&gt;
+    &lt;/ul&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</pre>
 
         </section>
 
@@ -174,5 +256,9 @@
     <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="assets/js/google-code-prettify/prettify.js"></script>
+
+    <script src="assets/js/bootstrap-formhelpers-selectbox.js"></script>
+    <script src="assets/js/bootstrap-formhelpers-googlefonts.codes.js"></script>
+    <script src="assets/js/bootstrap-formhelpers-googlefonts.js"></script>
 
 </body></html>
