--- a/language.html
+++ b/language.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en"><head>
     <meta charset="utf-8">
-    <title>Bootstrap Form Helpers</title>
+    <title>Language List - Bootstrap Form Helpers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Extend Bootstrap's components — now with 12 custom jQuery plugins.">
-    <meta name="keywords" content="jquery,jquery plugins,twitter bootstrap,bootstrap form,bootstrap form helpers">
+    <meta name="description" content="Extend Bootstrap's components with languages lists.">
+    <meta name="keywords" content="jquery,jquery plugins,twitter bootstrap,bootstrap form,bootstrap form helpers,languages,languages list">
     <meta name="author" content="">
 
     <!-- Le styles -->
@@ -121,30 +121,65 @@
       </div>
       <div class="span9">
 
-
-        <!-- Overview
+        <!-- Languages
         ================================================== -->
-        <section id="overview">
+        <section id="languages">
           <div class="page-header">
-            <h1>Bootstrap Form Helpers</h1>
+            <h1>Languages <small>bootstrap-formhelpers-languages.js</small></h1>
           </div>
+          <h3>About Languages</h3>
+          <p>For adding a drop-down of languages or display languages name from language code, include bootstrap-formhelpers-languages.codes.js and bootstrap-formhelpers-languages.js once alongside the other JS files.</p>
+          <p>If you want to have access to the country names, you can include bootstrap-formhelpers-countries.{language}.js</p>
+          <p>If you want to have access to the country flags, you can include bootstrap-formhelpers-countries.flags.css once alongside the other CSS files.</p>
+          <h3>Use cases</h3>
 
-          <p>These components are based on <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>.</p>
+          <p>Example for loading the list of languages and selecting a default language</p>
+          <form class="bs-docs-example form-inline">
+            <select class="input-medium bfh-languages" data-language="en"></select>
+          </form>
+          <pre class="prettyprint">&lt;select class="input-medium bfh-languages" data-language="en"&gt;&lt;/select&gt;</pre>
 
-          <p>These components are distributed for free but you can contribute and make them better.</p>
+          <p>Example for loading the list of languages with country names</p>
+          <form class="bs-docs-example form-inline">
+            <select class="input-medium bfh-languages" data-language="en_US" data-available="en_US,fr_CA,es_MX"></select>
+          </form>
+          <pre class="prettyprint">&lt;select class="input-medium bfh-languages" data-language="en_US" data-available="en_US,fr_CA,es_MX"&gt;&lt;/select&gt;</pre>
 
-          <script type="text/javascript"><!--
-          google_ad_client = "ca-pub-1024496565678366";
-          /* BootstrapFormHelpers */
-          google_ad_slot = "7047021726";
-          google_ad_width = 728;
-          google_ad_height = 90;
-          //-->
-          </script>
-          <script type="text/javascript"
-          src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-          </script>
+          <p>Example for loading the list of languages and flags using Bootstrap Form Helpers' Select Box</p>
+          <form class="bs-docs-example form-inline">
+            <div class="bfh-selectbox bfh-languages" data-language="en_US" data-available="en_US,fr_CA,es_MX" data-flags="true">
+              <input type="hidden" value="">
+              <a class="bfh-selectbox-toggle" role="button" data-toggle="bfh-selectbox" href="#">
+                <span class="bfh-selectbox-option input-medium" data-option=""></span>
+                <b class="caret"></b>
+              </a>
+              <div class="bfh-selectbox-options">
+                <div role="listbox">
+                  <ul role="option">
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </form>
+          <pre class="prettyprint">&lt;div class="bfh-selectbox bfh-languages" data-language="en_US" data-available="en_US,fr_CA,es_MX" data-flags="true"&gt;
+  &lt;input type="hidden" value=""&gt;
+  &lt;a class="bfh-selectbox-toggle" role="button" data-toggle="bfh-selectbox" href="#"&gt;
+    &lt;span class="bfh-selectbox-option input-medium" data-option=""&gt;&lt;/span&gt;
+    &lt;b class="caret"&gt;&lt;/b&gt;
+  &lt;/a&gt;
+  &lt;div class="bfh-selectbox-options"&gt;
+  &lt;div role="listbox"&gt;
+    &lt;ul role="option"&gt;
+    &lt;/ul&gt;
+  &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</pre>
 
+          <p>Example for displaying the language name and flag from language code</p>
+          <form class="bs-docs-example form-inline">
+            <span class="bfh-languages" data-language="en_US" data-flags="true"></span>
+          </form>
+          <pre class="prettyprint">&lt;span class="bfh-languages" data-language="en_US" data-flags="true"&gt;&lt;/span&gt;</pre>
         </section>
 
       </div>
@@ -174,5 +209,9 @@
     <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="assets/js/google-code-prettify/prettify.js"></script>
+
+    <script src="assets/js/bootstrap-formhelpers-selectbox.js"></script>
+    <script src="assets/js/bootstrap-formhelpers-languages.codes.js"></script>
+    <script src="assets/js/bootstrap-formhelpers-languages.js"></script>
 
 </body></html>
