--- a/phone.html
+++ b/phone.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en"><head>
     <meta charset="utf-8">
-    <title>Bootstrap Form Helpers</title>
+    <title>Phone Input - Bootstrap Form Helpers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Extend Bootstrap's components — now with 12 custom jQuery plugins.">
-    <meta name="keywords" content="jquery,jquery plugins,twitter bootstrap,bootstrap form,bootstrap form helpers">
+    <meta name="description" content="Extend Bootstrap's components with phone inputs.">
+    <meta name="keywords" content="jquery,jquery plugins,twitter bootstrap,bootstrap form,bootstrap form helpers,phone,phone inputs">
     <meta name="author" content="">
 
     <!-- Le styles -->
@@ -121,29 +121,49 @@
       </div>
       <div class="span9">
 
-
-        <!-- Overview
+        <!-- Phone
         ================================================== -->
-        <section id="overview">
+        <section id="phone">
           <div class="page-header">
-            <h1>Bootstrap Form Helpers</h1>
+            <h1>Phone <small>bootstrap-formhelpers-phone.js</small></h1>
           </div>
+          <h3>About phone</h3>
+          <p>For simple formatting of phone numbers, include bootstrap-formhelpers-phone.format.js and bootstrap-formhelpers-phone.js once alongside the other JS files.</p>
+          <h3>Use cases</h3>
 
-          <p>These components are based on <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>.</p>
+          <p>Simple example for formatting a phone number in input text</p>
+          <form class="bs-docs-example form-inline">
+            <input type="text" class="input-medium bfh-phone" data-format="+1 (ddd) ddd-dddd">
+          </form>
+          <pre class="prettyprint">&lt;input type="text" class="input-medium bfh-phone" data-format="+1 (ddd) ddd-dddd"&gt;</pre>
 
-          <p>These components are distributed for free but you can contribute and make them better.</p>
+          <p>Simple example for displaying a formatted phone number</p>
+          <form class="bs-docs-example form-inline">
+            <span class="bfh-phone" data-format="+1 (ddd) ddd-dddd" data-number="15555555555"></span>
+          </form>
+          <pre class="prettyprint">&lt;span class="bfh-phone" data-format="+1 (ddd) ddd-dddd" data-number="15555555555"&gt;&lt;/span&gt;</pre>
 
-          <script type="text/javascript"><!--
-          google_ad_client = "ca-pub-1024496565678366";
-          /* BootstrapFormHelpers */
-          google_ad_slot = "7047021726";
-          google_ad_width = 728;
-          google_ad_height = 90;
-          //-->
-          </script>
-          <script type="text/javascript"
-          src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-          </script>
+          <p>Example for formatting a phone number based on a country</p>
+          <form class="bs-docs-example form-inline">
+            <input type="text" class="input-medium bfh-phone" data-country="US">
+          </form>
+          <pre class="prettyprint">&lt;input type="text" class="input-medium bfh-phone" data-country="US"&gt;</pre>
+
+          <p>Example for formatting a phone number based on a country selector</p>
+          <form class="bs-docs-example form-inline">
+            <select id="countries_phone" class="input-medium bfh-countries" data-country="US"></select>
+            <input type="text" class="input-medium bfh-phone" data-country="countries_phone">
+          </form>
+          <pre class="prettyprint">&lt;select id="countries_phone" class="input-medium bfh-countries" data-country="US"&gt;&lt;/select&gt;
+&lt;select class="input-medium bfh-phone" data-country="countries_phone"&gt;&lt;/select&gt;</pre>
+
+          <p>Example for getting the unformatted phone number</p>
+          <form class="bs-docs-example form-inline">
+            <input id="phone1" type="text" class="input-medium bfh-phone" data-format="+1 (ddd) ddd-dddd">
+            <button onclick="alert($('#phone1').data('number'));return false;" class="btn">Get Phone</button>
+          </form>
+          <pre class="prettyprint">&lt;input id="phone1" type="text" class="input-medium bfh-phone" data-format="+1 (ddd) ddd-dddd"&gt;
+&lt;button onclick="alert($('#phone1').data('number'));return false;" class="btn"&gt;Get Phone&lt;/button&gt;</pre>
 
         </section>
 
@@ -174,5 +194,8 @@
     <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="assets/js/google-code-prettify/prettify.js"></script>
+
+    <script src="assets/js/bootstrap-formhelpers-phone.format.js"></script>
+    <script src="assets/js/bootstrap-formhelpers-phone.js"></script>
 
 </body></html>
