--- a/state.html
+++ b/state.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en"><head>
     <meta charset="utf-8">
-    <title>Bootstrap Form Helpers</title>
+    <title>State List - Bootstrap Form Helpers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Extend Bootstrap's components — now with 12 custom jQuery plugins.">
-    <meta name="keywords" content="jquery,jquery plugins,twitter bootstrap,bootstrap form,bootstrap form helpers">
+    <meta name="description" content="Extend Bootstrap's components with states lists.">
+    <meta name="keywords" content="jquery,jquery plugins,twitter bootstrap,bootstrap form,bootstrap form helpers,states,states list">
     <meta name="author" content="">
 
     <!-- Le styles -->
@@ -121,30 +121,129 @@
       </div>
       <div class="span9">
 
-
-        <!-- Overview
+        <!-- States
         ================================================== -->
-        <section id="overview">
+        <section id="states">
           <div class="page-header">
-            <h1>Bootstrap Form Helpers</h1>
+            <h1>States <small>bootstrap-formhelpers-states.js</small></h1>
           </div>
+          <h3>About states</h3>
+          <p>For adding a drop-down of states of a country or display state name from state and country code, include bootstrap-formhelpers-states.{language}.js and bootstrap-formhelpers-states.js once alongside the other JS files.</p>
+          <h3>Use cases</h3>
 
-          <p>These components are based on <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>.</p>
+          <p>Example for loading the list of states for a country and selecting a default state</p>
+          <form class="bs-docs-example form-inline">
+            <select class="input-medium bfh-states" data-country="US" data-state="CA"></select>
+          </form>
+          <pre class="prettyprint">&lt;select class="input-medium bfh-states" data-country="US" data-state="CA"&gt;&lt;/select&gt;</pre>
 
-          <p>These components are distributed for free but you can contribute and make them better.</p>
+          <p>Example for loading the list of states for a country and selecting a default state in JavaScript</p>
+          <form class="bs-docs-example form-inline">
+            <button onclick="$('#states1').bfhstates({country: 'US', state: 'CA'});return false;" class="btn">Load States</button>
+            <select id="states1" class="input-medium"></select>
+          </form>
+          <pre class="prettyprint">&lt;button onclick="$('#states1').bfhstates({country: 'US', state: 'CA'})" class="btn"&gt;Load States&lt;/button&gt;
+&lt;select id="states1" class="input-medium"&gt;&lt;/select&gt;</pre>
 
-          <script type="text/javascript"><!--
-          google_ad_client = "ca-pub-1024496565678366";
-          /* BootstrapFormHelpers */
-          google_ad_slot = "7047021726";
-          google_ad_width = 728;
-          google_ad_height = 90;
-          //-->
-          </script>
-          <script type="text/javascript"
-          src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-          </script>
+          <p>Example for loading the list of states using Bootstrap Form Helpers' Select Box</p>
+          <form class="bs-docs-example form-inline">
+            <div class="bfh-selectbox bfh-states" data-country="US" data-state="CA">
+              <input type="hidden" value="">
+              <a class="bfh-selectbox-toggle" role="button" data-toggle="bfh-selectbox" href="#">
+                <span class="bfh-selectbox-option input-medium" data-option=""></span>
+                <b class="caret"></b>
+              </a>
+              <div class="bfh-selectbox-options">
+                <div role="listbox">
+                  <ul role="option">
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </form>
+          <pre class="prettyprint">&lt;div class="bfh-selectbox bfh-states" data-country="US" data-state="CA"&gt;
+  &lt;input type="hidden" value=""&gt;
+  &lt;a class="bfh-selectbox-toggle" role="button" data-toggle="bfh-selectbox" href="#"&gt;
+    &lt;span class="bfh-selectbox-option input-medium" data-option=""&gt;&lt;/span&gt;
+    &lt;b class="caret"&gt;&lt;/b&gt;
+  &lt;/a&gt;
+  &lt;div class="bfh-selectbox-options"&gt;
+  &lt;div role="listbox"&gt;
+    &lt;ul role="option"&gt;
+    &lt;/ul&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</pre>
 
+          <p>Example for loading the list of states based on a country selector</p>
+          <form class="bs-docs-example form-inline">
+            <select id="countries_states1" class="input-medium bfh-countries" data-country="US"></select>
+            <select class="input-medium bfh-states" data-country="countries_states1"></select>
+          </form>
+          <pre class="prettyprint">&lt;select id="countries_states1" class="input-medium bfh-countries" data-country="US"&gt;&lt;/select&gt;
+&lt;select class="input-medium bfh-states" data-country="countries_states1"&gt;&lt;/select&gt;</pre>
+
+          <p>Example for loading the list of states based on a country select using Bootstrap Form Helpers' Select Box</p>
+          <form class="bs-docs-example form-inline">
+            <div id="countries_states2" class="bfh-selectbox bfh-countries" data-country="US">
+              <input type="hidden" value="">
+              <a class="bfh-selectbox-toggle" role="button" data-toggle="bfh-selectbox" href="#">
+                <span class="bfh-selectbox-option input-medium" data-option=""></span>
+                <b class="caret"></b>
+              </a>
+              <div class="bfh-selectbox-options">
+                <div role="listbox">
+                  <ul role="option">
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="bfh-selectbox bfh-states" data-country="countries_states2">
+              <input type="hidden" value="">
+              <a class="bfh-selectbox-toggle" role="button" data-toggle="bfh-selectbox" href="#">
+                <span class="bfh-selectbox-option input-medium" data-option=""></span>
+                <b class="caret"></b>
+              </a>
+              <div class="bfh-selectbox-options">
+                <div role="listbox">
+                  <ul role="option">
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </form>
+          <pre class="prettyprint">&lt;div id="countries_states2" class="bfh-selectbox bfh-countries" data-country="US"&gt;
+  &lt;input type="hidden" value=""&gt;
+  &lt;a class="bfh-selectbox-toggle" role="button" data-toggle="bfh-selectbox" href="#"&gt;
+    &lt;span class="bfh-selectbox-option input-medium" data-option=""&gt;&lt;/span&gt;
+    &lt;b class="caret"&gt;&lt;/b&gt;
+  &lt;/a&gt;
+  &lt;div class="bfh-selectbox-options"&gt;
+  &lt;div role="listbox"&gt;
+    &lt;ul role="option"&gt;
+    &lt;/ul&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+&lt;div class="bfh-selectbox bfh-states" data-country="countries_states2"&gt;
+  &lt;input type="hidden" value=""&gt;
+  &lt;a class="bfh-selectbox-toggle" role="button" data-toggle="bfh-selectbox" href="#"&gt;
+    &lt;span class="bfh-selectbox-option input-medium" data-option=""&gt;&lt;/span&gt;
+    &lt;b class="caret"&gt;&lt;/b&gt;
+  &lt;/a&gt;
+  &lt;div class="bfh-selectbox-options"&gt;
+  &lt;div role="listbox"&gt;
+    &lt;ul role="option"&gt;
+    &lt;/ul&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</pre>
+
+          <p>Example for displaying the state name from a state and country code</p>
+          <form class="bs-docs-example form-inline">
+            <span class="bfh-states" data-country="US" data-state="CA"></span>
+          </form>
+          <pre class="prettyprint">&lt;span class="bfh-states" data-country="US" data-state="CA"&gt;&lt;/span&gt;</pre>
         </section>
 
       </div>
@@ -174,5 +273,11 @@
     <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="assets/js/google-code-prettify/prettify.js"></script>
+
+    <script src="assets/js/bootstrap-formhelpers-selectbox.js"></script>
+    <script src="assets/js/bootstrap-formhelpers-countries.en_US.js"></script>
+    <script src="assets/js/bootstrap-formhelpers-countries.js"></script>
+    <script src="assets/js/bootstrap-formhelpers-states.en_US.js"></script>
+    <script src="assets/js/bootstrap-formhelpers-states.js"></script>
 
 </body></html>
