--- a/state.html
+++ b/state.html
@@ -127,6 +127,19 @@
           <div class="page-header">
             <h1>States <small>bootstrap-formhelpers-states.js</small></h1>
           </div>
+          
+          <script type="text/javascript"><!--
+          google_ad_client = "ca-pub-1024496565678366";
+          /* BootstrapFormHelpers */
+          google_ad_slot = "7047021726";
+          google_ad_width = 728;
+          google_ad_height = 90;
+          //-->
+          </script>
+          <script type="text/javascript"
+          src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+          </script>
+          
           <h3>About states</h3>
           <p>For adding a drop-down of states of a country or display state name from state and country code, include bootstrap-formhelpers-states.{language}.js and bootstrap-formhelpers-states.js once alongside the other JS files.</p>
           <h3>Use cases</h3>
