--- a/country.html
+++ b/country.html
@@ -127,6 +127,19 @@
           <div class="page-header">
             <h1>Countries <small>bootstrap-formhelpers-countries.js</small></h1>
           </div>
+          
+          <script type="text/javascript"><!--
+          google_ad_client = "ca-pub-1024496565678366";
+          /* BootstrapFormHelpers */
+          google_ad_slot = "7047021726";
+          google_ad_width = 728;
+          google_ad_height = 90;
+          //-->
+          </script>
+          <script type="text/javascript"
+          src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+          </script>
+          
           <h3>About countries</h3>
           <p>For adding a drop-down of countries or display country name from country code, include bootstrap-formhelpers-countries.{language}.js and bootstrap-formhelpers-countries.js once alongside the other JS files.</p>
           <p>If you want to have access to the country flags, you can include bootstrap-formhelpers-countries.flags.css once alongside the other CSS files.</p>
