--- a/font.html
+++ b/font.html
@@ -127,6 +127,19 @@
           <div class="page-header">
             <h1>Fonts <small>bootstrap-formhelpers-fonts.js</small></h1>
           </div>
+          
+          <script type="text/javascript"><!--
+          google_ad_client = "ca-pub-1024496565678366";
+          /* BootstrapFormHelpers */
+          google_ad_slot = "7047021726";
+          google_ad_width = 728;
+          google_ad_height = 90;
+          //-->
+          </script>
+          <script type="text/javascript"
+          src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+          </script>
+          
           <h3>About Fonts</h3>
           <p>For adding a drop-down of Fonts, include bootstrap-formhelpers-fonts.codes.js and bootstrap-formhelpers-fonts.js once alongside the other JS files.</p>
           <h3>Use cases</h3>
