Fixing languages demo page.

--- a/language.html
+++ b/language.html
@@ -224,6 +224,7 @@
     <script src="assets/js/google-code-prettify/prettify.js"></script>
 
     <script src="assets/js/bootstrap-formhelpers-selectbox.js"></script>
+    <script src="assets/js/bootstrap-formhelpers-countries.en_US.js"></script>
     <script src="assets/js/bootstrap-formhelpers-languages.codes.js"></script>
     <script src="assets/js/bootstrap-formhelpers-languages.js"></script>
 
