Adding bootstrap js 2.3.1

--- a/datepicker.html
+++ b/datepicker.html
@@ -293,6 +293,7 @@
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="assets/js/google-code-prettify/prettify.js"></script>
 
+    <script src="assets/js/bootstrap.js"></script>
     <script src="assets/js/bootstrap-formhelpers-datepicker.en_US.js"></script>
     <script src="assets/js/bootstrap-formhelpers-datepicker.js"></script>
 
