--- a/googlefont.html
+++ b/googlefont.html
@@ -52,11 +52,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="./index.html">Bootstrap Form Helpers</a>
+          <a class="brand" href="./">Bootstrap Form Helpers</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active">
-                <a href="./index.html">Home</a>
+                <a href="./">Home</a>
               </li>
             </ul>
           </div>
@@ -104,20 +104,32 @@
     <div class="row">
       <div class="span3 bs-docs-sidebar">
         <ul class="nav nav-list bs-docs-sidenav affix-top" data-spy="affix" data-offset-top="502" data-offset-bottom="250">
-          <li><a href="index.html"><i class="icon-chevron-right"></i> Overview</a></li>
-          <li><a href="select.html"><i class="icon-chevron-right"></i> Select Box</a></li>
-          <li><a href="country.html"><i class="icon-chevron-right"></i> Countries</a></li>
-          <li><a href="state.html"><i class="icon-chevron-right"></i> States</a></li>
-          <li><a href="currency.html"><i class="icon-chevron-right"></i> Currencies</a></li>
-          <li><a href="phone.html"><i class="icon-chevron-right"></i> Phone</a></li>
-          <li><a href="language.html"><i class="icon-chevron-right"></i> Languages</a></li>
-          <li><a href="timezone.html"><i class="icon-chevron-right"></i> Timezones</a></li>
-          <li><a href="googlefont.html"><i class="icon-chevron-right"></i> Google Fonts</a></li>
-          <li><a href="datepicker.html"><i class="icon-chevron-right"></i> Date Picker</a></li>
-          <li><a href="timepicker.html"><i class="icon-chevron-right"></i> Time Picker</a></li>
-          <li><a href="font.html"><i class="icon-chevron-right"></i> Fonts</a></li>
-          <li><a href="fontsize.html"><i class="icon-chevron-right"></i> Font Sizes</a></li>
+          <li><a href="./"><i class="icon-chevron-right"></i> Overview</a></li>
+          <li><a href="select"><i class="icon-chevron-right"></i> Select Box</a></li>
+          <li><a href="country"><i class="icon-chevron-right"></i> Countries</a></li>
+          <li><a href="state"><i class="icon-chevron-right"></i> States</a></li>
+          <li><a href="currency"><i class="icon-chevron-right"></i> Currencies</a></li>
+          <li><a href="phone"><i class="icon-chevron-right"></i> Phone</a></li>
+          <li><a href="language"><i class="icon-chevron-right"></i> Languages</a></li>
+          <li><a href="timezone"><i class="icon-chevron-right"></i> Timezones</a></li>
+          <li><a href="googlefont"><i class="icon-chevron-right"></i> Google Fonts</a></li>
+          <li><a href="datepicker"><i class="icon-chevron-right"></i> Date Picker</a></li>
+          <li><a href="timepicker"><i class="icon-chevron-right"></i> Time Picker</a></li>
+          <li><a href="font"><i class="icon-chevron-right"></i> Fonts</a></li>
+          <li><a href="fontsize"><i class="icon-chevron-right"></i> Font Sizes</a></li>
         </ul>
+        <br><br>
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-1024496565678366";
+/* BootstrapSky */
+google_ad_slot = "5761729320";
+google_ad_width = 160;
+google_ad_height = 600;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
       </div>
       <div class="span9">
 
@@ -240,6 +252,18 @@
   &lt;/div&gt;
 &lt;/div&gt;</pre>
 
+	  <script type="text/javascript"><!--
+          google_ad_client = "ca-pub-1024496565678366";
+          /* BootstrapFormHelpers */
+          google_ad_slot = "7047021726";
+          google_ad_width = 728;
+          google_ad_height = 90;
+          //-->
+          </script>
+          <script type="text/javascript"
+          src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+          </script>
+          
         </section>
 
       </div>
