--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en"><head>
     <meta charset="utf-8">
-    <title>Bootstrap Form Helpers</title>
+    <title>Twitter Bootstrap Form Helpers jQuery plugins</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Extend Bootstrap's components — now with 12 custom jQuery plugins.">
-    <meta name="keywords" content="jquery,jquery plugins,twitter bootstrap,bootstrap form,bootstrap form helpers">
-    <meta name="author" content="">
+    <meta name="description" content="Extend Twitter Bootstrap's components with Bootstrap Form Helpers custom jQuery plugins.">
+    <meta name="author" content="Vincent Lamanna">
 
+    <link rel="canonical" href="http://bootstrapformhelpers.com"/>
+    
     <!-- Le styles -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
@@ -68,7 +69,7 @@
   ================================================== -->
   <div class="jumbotron masthead">
     <div class="container">
-      <h1>Bootstrap Form Helpers</h1>
+      <h1>Twitter Bootstrap Form Helpers</h1>
       <p class="lead">Extend Bootstrap's components—now with 12 custom jQuery plugins.</p>
       <p><a href="https://github.com/vlamanna/BootstrapFormHelpers/zipball/master" class="btn btn-primary btn-large">Download Bootstrap Form Helpers</a></p>
       <ul class="masthead-links">
@@ -126,7 +127,7 @@
         ================================================== -->
         <section id="overview">
           <div class="page-header">
-            <h1>Bootstrap Form Helpers</h1>
+            <h2>Twitter Bootstrap Form Helpers</h2>
           </div>
 
 		  <script type="text/javascript"><!--
