--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div class="span3 bs-docs-sidebar">
         <ul class="nav nav-list bs-docs-sidenav affix-top" data-spy="affix" data-offset-top="502" data-offset-bottom="250">
           <li><a href="./"><i class="icon-chevron-right"></i> Overview</a></li>
-          <li><a href="select"><i class="icon-chevron-right"></i> Select Box</a></li>
+          <li><a href="select"><i class="icon-chevron-right"></i> Select</a></li>
           <li><a href="country"><i class="icon-chevron-right"></i> Countries</a></li>
           <li><a href="state"><i class="icon-chevron-right"></i> States</a></li>
           <li><a href="currency"><i class="icon-chevron-right"></i> Currencies</a></li>
