--- a/select.html
+++ b/select.html
@@ -138,7 +138,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
         ================================================== -->
         <section id="selectbox">
           <div class="page-header">
-            <h2>Select <small>bootstrap-formhelpers-selectbox.js</small></h2>
+            <h2>Select jQuery plugin for Twitter Bootstap <small>bootstrap-formhelpers-selectbox.js</small></h2>
           </div>
           
           <script type="text/javascript"><!--
