--- a/select.html
+++ b/select.html
@@ -107,17 +107,17 @@
         <ul class="nav nav-list bs-docs-sidenav affix-top" data-spy="affix" data-offset-top="502" data-offset-bottom="250">
           <li><a href="./"><i class="icon-chevron-right"></i> Overview</a></li>
           <li><a href="select"><i class="icon-chevron-right"></i> Select</a></li>
-          <li><a href="country"><i class="icon-chevron-right"></i> Countries</a></li>
-          <li><a href="state"><i class="icon-chevron-right"></i> States</a></li>
-          <li><a href="currency"><i class="icon-chevron-right"></i> Currencies</a></li>
-          <li><a href="phone"><i class="icon-chevron-right"></i> Phone</a></li>
-          <li><a href="language"><i class="icon-chevron-right"></i> Languages</a></li>
-          <li><a href="timezone"><i class="icon-chevron-right"></i> Timezones</a></li>
-          <li><a href="googlefont"><i class="icon-chevron-right"></i> Google Fonts</a></li>
+          <li><a href="country"><i class="icon-chevron-right"></i> Country Picker</a></li>
+          <li><a href="state"><i class="icon-chevron-right"></i> State Picker</a></li>
+          <li><a href="currency"><i class="icon-chevron-right"></i> Currency Picker</a></li>
+          <li><a href="phone"><i class="icon-chevron-right"></i> Phone Input</a></li>
+          <li><a href="language"><i class="icon-chevron-right"></i> Language Picker</a></li>
+          <li><a href="timezone"><i class="icon-chevron-right"></i> Timezone Picker</a></li>
+          <li><a href="googlefont"><i class="icon-chevron-right"></i> Google Font Picker</a></li>
           <li><a href="datepicker"><i class="icon-chevron-right"></i> Date Picker</a></li>
           <li><a href="timepicker"><i class="icon-chevron-right"></i> Time Picker</a></li>
-          <li><a href="font"><i class="icon-chevron-right"></i> Fonts</a></li>
-          <li><a href="fontsize"><i class="icon-chevron-right"></i> Font Sizes</a></li>
+          <li><a href="font"><i class="icon-chevron-right"></i> Font Picker</a></li>
+          <li><a href="fontsize"><i class="icon-chevron-right"></i> Font Size Picker</a></li>
         </ul>
         <br><br>
 <script type="text/javascript"><!--
