--- a/phone.html
+++ b/phone.html
@@ -106,18 +106,18 @@
       <div class="span3 bs-docs-sidebar">
         <ul class="nav nav-list bs-docs-sidenav affix-top" data-spy="affix" data-offset-top="502" data-offset-bottom="250">
           <li><a href="./"><i class="icon-chevron-right"></i> Overview</a></li>
-          <li><a href="select"><i class="icon-chevron-right"></i> Select Box</a></li>
-          <li><a href="country"><i class="icon-chevron-right"></i> Countries</a></li>
-          <li><a href="state"><i class="icon-chevron-right"></i> States</a></li>
-          <li><a href="currency"><i class="icon-chevron-right"></i> Currencies</a></li>
-          <li><a href="phone"><i class="icon-chevron-right"></i> Phone</a></li>
-          <li><a href="language"><i class="icon-chevron-right"></i> Languages</a></li>
-          <li><a href="timezone"><i class="icon-chevron-right"></i> Timezones</a></li>
-          <li><a href="googlefont"><i class="icon-chevron-right"></i> Google Fonts</a></li>
+          <li><a href="select"><i class="icon-chevron-right"></i> Select</a></li>
+          <li><a href="country"><i class="icon-chevron-right"></i> Country Picker</a></li>
+          <li><a href="state"><i class="icon-chevron-right"></i> State Picker</a></li>
+          <li><a href="currency"><i class="icon-chevron-right"></i> Currency Picker</a></li>
+          <li><a href="phone"><i class="icon-chevron-right"></i> Phone Input</a></li>
+          <li><a href="language"><i class="icon-chevron-right"></i> Language Picker</a></li>
+          <li><a href="timezone"><i class="icon-chevron-right"></i> Timezone Picker</a></li>
+          <li><a href="googlefont"><i class="icon-chevron-right"></i> Google Font Picker</a></li>
           <li><a href="datepicker"><i class="icon-chevron-right"></i> Date Picker</a></li>
           <li><a href="timepicker"><i class="icon-chevron-right"></i> Time Picker</a></li>
-          <li><a href="font"><i class="icon-chevron-right"></i> Fonts</a></li>
-          <li><a href="fontsize"><i class="icon-chevron-right"></i> Font Sizes</a></li>
+          <li><a href="font"><i class="icon-chevron-right"></i> Font Picker</a></li>
+          <li><a href="fontsize"><i class="icon-chevron-right"></i> Font Size Picker</a></li>
         </ul>
         <br><br>
 <script type="text/javascript"><!--
@@ -138,7 +138,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
         ================================================== -->
         <section id="phone">
           <div class="page-header">
-            <h2>Phone Picker jQuery plugin for Twitter Bootstrap</h2>
+            <h2>Phone Input jQuery plugin for Twitter Bootstrap</h2>
           </div>
           
           <script type="text/javascript"><!--
@@ -153,7 +153,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
           src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
           </script>
           
-          <h3>About phone picker</h3>
+          <h3>About phone input</h3>
           <p>For simple formatting of phone numbers, include bootstrap-formhelpers-phone.format.js and bootstrap-formhelpers-phone.js once alongside the other JS files.</p>
           <h3>Use cases</h3>
 
