--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           
           <p>To get started with these plugins, simply explore our documentation by clicking on the plugin that interest you from the left menu.</p>
           
-          <p>These <i>jQuery plugins</i> are based on <a href="http://twitter.github.com/bootstrap/"><i>Twitter Bootstrap</i></a>.</p>
+          <p>These <a target="_blank" href="http://plugins.jquery.com/"><i>jQuery plugins</i></a> are based on <a target="_blank" href="http://twitter.github.com/bootstrap/"><i>Twitter Bootstrap</i></a>.</p>
 
           <p>These jQuery plugins are distributed for free but you can contribute and make them better.</p>
 
