--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   ================================================== -->
   <div class="jumbotron masthead">
     <div class="container">
-      <h1>Twitter Bootstrap Form Helpers</h1>
+      <h2>Twitter Bootstrap Form Helpers</h2>
       <p class="lead">Extend Twitter Bootstrap—now with 12 custom jQuery plugins.</p>
       <p><a href="https://github.com/vlamanna/BootstrapFormHelpers/zipball/master" class="btn btn-primary btn-large">Download Bootstrap Form Helpers</a></p>
       <ul class="masthead-links">
@@ -127,7 +127,7 @@
         ================================================== -->
         <section id="overview">
           <div class="page-header">
-            <h2>Twitter Bootstrap Form Helpers</h2>
+            <h1>Twitter Bootstrap Form Helpers jQuery Plugins</h1>
           </div>
 
 		  <script type="text/javascript"><!--
