--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <li>
           <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=vlamanna&amp;repo=BootstrapFormHelpers&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" style="width: 98px; height: 20px;"></iframe>
         </li>
-        <li style="height:15px;">
+        <li style="height:15px; min-width:300px">
           <!-- AddThis Button BEGIN -->
           <div class="addthis_toolbox addthis_default_style ">
           <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
